[package]
name = "crbn-san"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
jiff = "0.2.17"
poise = "0.6.1"
reqwest = { version = "0.12.28", features = ["json"] }
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "mock", "with-chrono", "with-json", "with-uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
serenity = { version = "0.12.5", features = ["client", "standard_framework", "voice"]}
songbird = { version = "0.5.0" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-futures = "0.2"
symphonia = { version = "0.5.5", features = ["aac", "mp3", "isomp4", "alac"] }
